--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <option value="st">styck</option>
     </select>
     <input type="text" id="food" placeholder="Skriv mat (t.ex. potatis)" autocomplete="off" required>
-    <div id="suggestions"></div>
+    <div id="suggestions"></div><div id="feedback"></div>
     <button type="submit">Lägg till</button>
   </form>
 
