--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
   <h2>Veckosammanfattning</h2>
   <div id="week"></div>
 
+<h2>Lägg till egen produkt</h2>
+<form id="customForm">
+  <input type="text" id="customName" placeholder="Produktnamn" required>
+  <input type="number" id="customKcal" placeholder="kcal/100g" required>
+  <input type="number" id="customProtein" placeholder="protein/100g" required>
+  <button type="submit">Spara produkt</button>
+</form>
+
   <script src="script.js"></script>
 </body>
 </html>
