--- a/index.html
+++ b/index.html
@@ -1,46 +1,1 @@
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-  <meta charset="UTF-8">
-  <title>ZipDiet v2.2</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>ZipDiet v2.2</h1>
-  <form id="form">
-    <input type="number" id="amount" placeholder="Mängd" required>
-    <select id="unit">
-      <option value="g">gram</option>
-      <option value="ml">ml</option>
-      <option value="dl">dl</option>
-      <option value="st">styck</option>
-    </select>
-    <input type="text" id="food" placeholder="Sök mat" autocomplete="off" required>
-    <div id="suggestions"></div>
-    <div id="feedback"></div>
-    <button type="submit">Lägg till</button>
-  </form>
-
-  <div id="list"></div>
-  <div id="summary"></div>
-  <button id="save">Spara dag</button>
-  <button id="reset">Nollställ dag</button>
-
-  <h2>Tidigare dagar</h2>
-  <ul id="history"></ul>
-
-  <h2>Veckosammanfattning</h2>
-  <div id="week"></div>
-
-  <h2>Lägg till egen produkt</h2>
-  <form id="customForm">
-    <input type="text" id="customName" placeholder="Produktnamn" required>
-    <input type="number" id="customKcal" placeholder="kcal/100g" required>
-    <input type="number" id="customProtein" placeholder="protein/100g" required>
-    <button type="submit">Spara produkt</button>
-  </form>
-
-  <script src="script.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>ZipDiet v2.3</title></head><body><h1>ZipDiet v2.3</h1></body></html>
