--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ZipDiet v2.3.1</title>
+  <title>ZipDiet v2.3.2</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -18,13 +18,13 @@
       <option value="st">styck</option>
     </select>
     <input type="text" id="food" placeholder="Sök mat (offline)" autocomplete="off" required />
-    <button type="submit">Lägg till</button>
+    <button id="addBtn" type="submit">Lägg till</button>
   </form>
 
   <div id="list"></div>
   <div id="summary"></div>
-  <button id="save">Spara dag</button>
-  <button id="reset">Nollställ dag</button>
+  <button id="save" type="button">Spara dag</button>
+  <button id="reset" type="button">Nollställ dag</button>
 
   <h2>Tidigare dagar</h2>
   <ul id="history"></ul>
