--- a/index.html
+++ b/index.html
@@ -1,49 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ZipDiet v2.3.5</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <h1>ZipDiet – Offline-läge</h1>
-  <form id="form">
-    <input type="number" id="amount" placeholder="Mängd" required />
-    <select id="unit">
-      <option value="g">gram</option>
-      <option value="st">styck</option>
-    </select>
-    <input type="text" id="food" placeholder="Sök mat (offline)" autocomplete="off" required />
-    <button id="addBtn" type="submit">Lägg till</button>
-  </form>
-
-  <label>
-    <input type="checkbox" id="autoSwitch" checked />
-    Byt automatiskt till “styck” för produkter med vikt/st
-  </label>
-
-  <div id="list"></div>
-  <div id="summary"></div>
-  <button id="save" type="button">Spara dag</button>
-  <button id="reset" type="button">Nollställ dag</button>
-
-  <h2>Tidigare dagar</h2>
-  <ul id="history"></ul>
-
-  <h2>Veckosammanfattning</h2>
-  <div id="week"></div>
-
-  <h2>Lägg till egen produkt</h2>
-  <form id="customForm">
-    <input type="text" id="customName" placeholder="Produktnamn" required />
-    <input type="number" id="customKcal" placeholder="kcal/100g" required />
-    <input type="number" id="customProtein" placeholder="protein/100g" required />
-    <input type="number" id="customWeight" placeholder="vikt/st (valfritt)" />
-    <button type="submit">Spara produkt</button>
-  </form>
-
-  <script src="script.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>ZipDiet</title></head><body><h1>ZipDiet v2.3.6</h1></body></html>
