--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ZipDiet v2.4.1</title>
+  <title>Antes Kalorintag</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>ZipDiet – Offline-läge</h1>
+    <h1>Antes Kalorintag</h1>
     <form id="form">
       <input type="number" id="amount" placeholder="Mängd" required />
       <select id="unit">
