--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Antes Kalorintag</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Antes Kalorintag</h1>
-  <div id="app"></div>
-  <script src="script.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Antes Kalorintag</title></head><body><h1>ZipDiet v3.0</h1></body></html>
