--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<!DOCTYPE html><html><head><title>Antes Kalorintag</title></head><body><h1>ZipDiet v3.0</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Antes Kalorintag</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1>Antes Kalorintag</h1>
+  <form id="form">
+    <input type="number" id="amount" placeholder="Mängd" required />
+    <select id="unit">
+      <option value="g">gram</option>
+      <option value="st">styck</option>
+    </select>
+    <input type="text" id="food" placeholder="Sök mat" autocomplete="off" required />
+    <div id="suggestions"></div>
+    <button type="submit">Lägg till</button>
+  </form>
+  <div id="list"></div>
+  <div id="summary"></div>
+  <script src="script.js"></script>
+</body>
+</html>
