--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
-
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Antes Kalorintag</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Antes Kalorintag</title>
+    <style>
+        body {
+            background-color: #111;
+            color: #fff;
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+        input, select, button {
+            padding: 10px;
+            margin: 5px;
+            border-radius: 8px;
+            border: none;
+            font-size: 16px;
+        }
+        .btn {
+            background-color: #00b894;
+            color: #fff;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-  <h1>Antes Kalorintag</h1>
-  <form id="form">
-    <input type="number" id="amount" placeholder="Mängd" required />
-    <select id="unit">
-      <option value="g">gram</option>
-      <option value="st">styck</option>
-    </select>
-    <input type="text" id="food" placeholder="Sök mat" autocomplete="off" required />
-    <div id="suggestions"></div>
-    <button type="submit">Lägg till</button>
-  </form>
-  <div id="list"></div>
-  <div id="summary"></div>
-  <script src="script.js"></script>
+    <h1>Antes Kalorintag</h1>
+    <p>Appen laddades korrekt med JS!</p>
+    <script src="app.js"></script>
 </body>
 </html>
