--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Antes Kalorintag</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
@@ -22,17 +22,17 @@
     <div id="entries"></div>
     <h2>Mål</h2>
     <div class="goals">
-      <label>Kalorier: <input type="number" id="goalKcal"></label>
-      <label>Protein (g): <input type="number" id="goalProtein"></label>
-      <label>Fett (g): <input type="number" id="goalFat"></label>
+      <label>Kalorier: <input type="number" id="goalKcal" /></label>
+      <label>Protein (g): <input type="number" id="goalProtein" /></label>
+      <label>Fett (g): <input type="number" id="goalFat" /></label>
     </div>
     <h2>Lägg till egen produkt</h2>
     <form id="custom-form">
-      <input type="text" id="customName" placeholder="Namn">
-      <input type="number" id="customKcal" placeholder="kcal/100g">
-      <input type="number" id="customProtein" placeholder="protein/100g">
-      <input type="number" id="customFat" placeholder="fett/100g">
-      <input type="number" id="customWeight" placeholder="vikt/st (valfritt)">
+      <input type="text" id="customName" placeholder="Namn" />
+      <input type="number" id="customKcal" placeholder="kcal/100g" />
+      <input type="number" id="customProtein" placeholder="protein/100g" />
+      <input type="number" id="customFat" placeholder="fett/100g" />
+      <input type="number" id="customWeight" placeholder="vikt/st (valfritt)" />
       <button type="submit">Spara</button>
     </form>
   </div>
