--- a/index.html
+++ b/index.html
@@ -1,43 +1,1 @@
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Antes Kalorintag</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <h1>Antes Kalorintag</h1>
-    <form id="product-form">
-      <input type="number" id="amount" placeholder="Mängd" required />
-      <select id="unit">
-        <option value="g">gram</option>
-        <option value="st">styck</option>
-      </select>
-      <input type="text" id="search" placeholder="Sök produkt..." autocomplete="off" required />
-      <div id="suggestions"></div>
-      <button type="submit">Lägg till</button>
-    </form>
-    <div id="entries"></div>
-    <h2>Mål</h2>
-    <div class="goals">
-      <label>Kalorier: <input type="number" id="goalKcal" /></label>
-      <label>Protein (g): <input type="number" id="goalProtein" /></label>
-      <label>Fett (g): <input type="number" id="goalFat" /></label>
-      <button onclick="saveGoals()">Spara mål</button>
-      <button onclick="clearGoals()">Ta bort mål</button>
-    </div>
-    <h2>Lägg till egen produkt</h2>
-    <form id="custom-form">
-      <input type="text" id="customName" placeholder="Namn" />
-      <input type="number" id="customKcal" placeholder="kcal/100g" />
-      <input type="number" id="customProtein" placeholder="protein/100g" />
-      <input type="number" id="customFat" placeholder="fett/100g" />
-      <input type="number" id="customWeight" placeholder="vikt/st (valfritt)" />
-      <button type="submit">Spara</button>
-    </form>
-  </div>
-  <script src="app.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>ZipDiet 103</title><link rel='stylesheet' href='style.css'></head><body><h1>ZipDiet</h1><script src='app.js'></script></body></html>
