--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>ZipDiet 103</title><link rel='stylesheet' href='style.css'></head><body><h1>ZipDiet</h1><script src='app.js'></script></body></html>
+<!DOCTYPE html><html><head><title>ZipDiet AI</title><link rel='stylesheet' href='style.css'></head><body><h1>ZipDiet AI</h1><script src='app.js'></script></body></html>
